Refactor components initialization

--- a/view/frontend/templates/component/image_teaser.phtml
+++ b/view/frontend/templates/component/image_teaser.phtml
@@ -36,7 +36,7 @@ if ($mobileLayout == 'mobile-slider' && count($slides) > 1) {
 }
 
 $componentClasses = $block->getMix();
-$componentClasses .= $block->getSkipSpacing() ? ' cs-image-teaser--skip-spacing' : ''; 
+$componentClasses .= $block->getSkipSpacing() ? ' cs-image-teaser--skip-spacing' : '';
 $componentClasses .= ' ' . $block->getVar('image_teaser/additional_css_classes');
 
 $contentPlacement = $imageTeaser['scenario']['contentPlacement']['id'];
@@ -63,6 +63,7 @@ endif;
 $windowWidthClass = ($teaserWidth == 'window' || $teaserWidth == 'window-slider') ? ' cs-image-teaser--window-width' : '';
 
 $jsConfig = isset($imageTeaser['jsConfig']) ? json_encode($imageTeaser['jsConfig']) : '{}';
+$jsSettings = json_encode($block->getVar('image_teaser/js') ?: '{}');
 
 $gridTeaser = $block->getGridTeaser();
 
@@ -81,6 +82,9 @@ if ($gridTeaser) {
 }
 ?>
 
+<link rel="stylesheet" href="<?= $block->getViewFileUrl('css/image-teaser.css'); ?>"/>
+<script defer-ignore></script>
+
 <?php if ($gridTeaser): ?>
 <li class="<?= $teaserBrickClass ?>" data-teaser-id="<?= $teaserId ?>">
 <?php else: ?>
@@ -93,7 +97,7 @@ if ($gridTeaser) {
         ->setIsSlider($isSlider)
         ->setIsSliderMobile($isSliderMobile)
         ->setContentPlacement($contentPlacement)
-        ->toHtml(); 
+        ->toHtml();
     ?>
 
     <div class="cs-container cs-container--image-teaser<?= $containerClasses ?>">
@@ -107,7 +111,7 @@ if ($gridTeaser) {
                 ->setIsSlider($isSlider)
                 ->setIsSliderMobile($isSliderMobile)
                 ->setContentPlacement($contentPlacement)
-                ->toHtml(); 
+                ->toHtml();
             ?>
 
             <div class="cs-image-teaser <?= $windowWidthClass ?>
@@ -122,6 +126,7 @@ if ($gridTeaser) {
                 data-mobile-is-slider="<?= $isSliderMobile ?>"
                 data-layout="<?= $contentPlacement ?>"
                 data-js-configuration='<?= $jsConfig; ?>'
+                data-mage-init='{ "ccImageTeaser": <?= $jsSettings ?> }'
             >
 
                 <?= $this->getLayout()
@@ -131,7 +136,7 @@ if ($gridTeaser) {
                     ->setIsSlider($isSlider)
                     ->setIsSliderMobile($isSliderMobile)
                     ->setContentPlacement($contentPlacement)
-                    ->toHtml(); 
+                    ->toHtml();
                 ?>
 
                 <div class="cs-image-teaser__carousel">
@@ -142,7 +147,7 @@ if ($gridTeaser) {
                         ->setIsSlider($isSlider)
                         ->setIsSliderMobile($isSliderMobile)
                         ->setContentPlacement($contentPlacement)
-                        ->toHtml(); 
+                        ->toHtml();
                     ?>
 
                     <div class="cs-image-teaser__wrapper cs-image-teaser__wrapper--content-<?= $contentPlacement ?>">
@@ -153,7 +158,7 @@ if ($gridTeaser) {
                             ->setIsSlider($isSlider)
                             ->setIsSliderMobile($isSliderMobile)
                             ->setContentPlacement($contentPlacement)
-                            ->toHtml(); 
+                            ->toHtml();
                         ?>
 
                         <ul class="cs-image-teaser__slides <?= $mosaicProportions != '' ? ' cs-image-teaser__slides--mosaic-scenario-' . $mosaicProportions : '' ?>">
@@ -166,7 +171,7 @@ if ($gridTeaser) {
                                     ->setIsSlider($isSlider)
                                     ->setIsSliderMobile($isSliderMobile)
                                     ->setContentPlacement($contentPlacement)
-                                    ->toHtml(); 
+                                    ->toHtml();
                                 ?>
                             <?php endforeach; ?>
                         </ul>
@@ -178,7 +183,7 @@ if ($gridTeaser) {
                             ->setIsSlider($isSlider)
                             ->setIsSliderMobile($isSliderMobile)
                             ->setContentPlacement($contentPlacement)
-                            ->toHtml(); 
+                            ->toHtml();
                         ?>
                     </div>
 
@@ -189,7 +194,7 @@ if ($gridTeaser) {
                         ->setIsSlider($isSlider)
                         ->setIsSliderMobile($isSliderMobile)
                         ->setContentPlacement($contentPlacement)
-                        ->toHtml(); 
+                        ->toHtml();
                     ?>
 
                     <?php if (($isSlider or $isSliderMobile) && $block->getVar('image_teaser/navigation/show')): ?>
@@ -198,14 +203,14 @@ if ($gridTeaser) {
                             ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/elements/nav-prev.phtml')
                             ->setIcon($block->getVar('image_teaser/navigation/arrows/prev/path'))
                             ->setImageTeaserData($imageTeaser)
-                            ->toHtml(); 
+                            ->toHtml();
                         ?>
                         <?= $this->getLayout()
                             ->createBlock(\Magento\Framework\View\Element\Template::class)
                             ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/elements/nav-next.phtml')
                             ->setIcon($block->getVar('image_teaser/navigation/arrows/next/path'))
                             ->setImageTeaserData($imageTeaser)
-                            ->toHtml(); 
+                            ->toHtml();
                         ?>
                     <?php endif; ?>
 
@@ -216,7 +221,7 @@ if ($gridTeaser) {
                         ->setIsSlider($isSlider)
                         ->setIsSliderMobile($isSliderMobile)
                         ->setContentPlacement($contentPlacement)
-                        ->toHtml(); 
+                        ->toHtml();
                     ?>
 
                 </div>
@@ -228,7 +233,7 @@ if ($gridTeaser) {
                     ->setIsSlider($isSlider)
                     ->setIsSliderMobile($isSliderMobile)
                     ->setContentPlacement($contentPlacement)
-                    ->toHtml(); 
+                    ->toHtml();
                 ?>
 
                 <?= $this->getLayout()
@@ -238,7 +243,7 @@ if ($gridTeaser) {
                     ->setIsSlider($isSlider)
                     ->setIsSliderMobile($isSliderMobile)
                     ->setShowPagination($block->getVar('image_teaser/pagination/show'))
-                    ->toHtml(); 
+                    ->toHtml();
                 ?>
 
                 <?= $this->getLayout()
@@ -248,7 +253,7 @@ if ($gridTeaser) {
                     ->setIsSlider($isSlider)
                     ->setIsSliderMobile($isSliderMobile)
                     ->setContentPlacement($contentPlacement)
-                    ->toHtml(); 
+                    ->toHtml();
                 ?>
             </div>
 
@@ -259,7 +264,7 @@ if ($gridTeaser) {
                 ->setIsSlider($isSlider)
                 ->setIsSliderMobile($isSliderMobile)
                 ->setContentPlacement($contentPlacement)
-                ->toHtml(); 
+                ->toHtml();
             ?>
 
         <?php if ($teaserWidth == 'container' or $teaserWidth == 'container-slider'): ?>
@@ -274,7 +279,7 @@ if ($gridTeaser) {
         ->setIsSlider($isSlider)
         ->setIsSliderMobile($isSliderMobile)
         ->setContentPlacement($contentPlacement)
-        ->toHtml(); 
+        ->toHtml();
     ?>
 <?php if ($gridTeaser): ?>
 </li>
