--- a/view/frontend/templates/component/separator.phtml
+++ b/view/frontend/templates/component/separator.phtml
@@ -6,10 +6,13 @@ $componentClasses = $block->getSkipSpacing() ? ' cs-separator--skip-spacing' : '
 $componentClasses .= ' ' . $block->getVar('separator/additional_css_classes');
 ?>
 
+<link rel="stylesheet" href="<?= $block->getViewFileUrl('css/separator.css'); ?>"/>
+<script defer-ignore></script>
+
 <div <?= $visibility ? 'class="' . $visibility . '"' : ''; ?>>
     <div class="cs-container cs-container--separator">
         <div class="cs-container__inner">
-            <hr class="cs-separator<?= $componentClasses ?>">
+            <hr class="cs-separator<?= $componentClasses ?>" data-mage-init='{ "ccSeparator": {} }'>
         </div>
     </div>
 </div>
