--- a/view/frontend/templates/component/teaser_and_text.phtml
+++ b/view/frontend/templates/component/teaser_and_text.phtml
@@ -32,6 +32,7 @@ endif;
 $windowWidthClass = ($teaserWidth == 'window') ? ' cs-image-teaser--window-width' : '';
 
 $jsConfig = isset($imageTeaser['jsConfig']) ? json_encode($imageTeaser['jsConfig']) : '{}';
+$jsSettings = json_encode($block->getVar('teaser_and_text/js') ?: '{}');
 ?>
 
 <div <?= $visibility ? 'class="' . $visibility . '"' : ''; ?>>
@@ -49,6 +50,7 @@ $jsConfig = isset($imageTeaser['jsConfig']) ? json_encode($imageTeaser['jsConfig
                 data-mobile-is-slider="false"
                 data-layout="over"
                 data-js-configuration='<?= $jsConfig; ?>'
+                data-mage-init='{ "ccImageTeaser": <?= $jsSettings ?> }'
             >
 
                 <div class="cs-image-teaser__carousel">
