--- a/view/frontend/templates/component/brand_carousel.phtml
+++ b/view/frontend/templates/component/brand_carousel.phtml
@@ -14,12 +14,17 @@ $navIconNextPath = $block->getVar('brand_carousel/navigation/arrows/next/path');
 
 $componentClasses = $block->getSkipSpacing() ? ' cs-brand-carousel--skip-spacing' : ''; 
 $componentClasses .= ' ' . $block->getVar('brand_carousel/additional_css_classes');
+
+$jsSettings = json_encode($block->getVar('brand_carousel/js') ?: '{}');
 ?>
+
+<link rel="stylesheet" href="<?= $block->getViewFileUrl('css/brand-carousel.css'); ?>"/>
+<script defer-ignore></script>
 
 <div <?= $visibility ? 'class="' . $visibility . '"' : ''; ?>>
     <div class="cs-container cs-container--brand-carousel">
         <div class="cs-container__inner">
-            <div class="cs-brand-carousel cs-brand-carousel--slider<?= $componentClasses ?>">
+            <div class="cs-brand-carousel cs-brand-carousel--slider<?= $componentClasses ?>" data-mage-init='{ "ccBrandCarousel": <?= $jsSettings ?> }'>
                 <div class="cs-brand-carousel__carousel">
                     <div class="cs-brand-carousel__wrapper">
                         <ul class="cs-brand-carousel__slides">
