--- a/view/frontend/templates/component/category_links.phtml
+++ b/view/frontend/templates/component/category_links.phtml
@@ -13,10 +13,13 @@ $componentClasses .= $block->getSkipSpacing() ? ' cs-category-links--skip-spacin
 $componentClasses .= ' ' . $block->getVar('category_links/additional_css_classes');
 ?>
 
+<link rel="stylesheet" href="<?= $block->getViewFileUrl('css/category-links.css'); ?>"/>
+<script defer-ignore></script>
+
 <div <?= $visibility ? 'class="' . $visibility . '"' : ''; ?>>
     <div class="cs-container cs-container--category-links">
         <div class="cs-container__inner">
-            <div class="cs-category-links<?= $componentClasses ?>" <?php if($hasSubcategories): ?>data-mage-init='{"collapsible":{"mediaQueryScope":"(max-width: 767px)"}}'<?php endif;?>>
+            <div class="cs-category-links<?= $componentClasses ?>" <?php if($hasSubcategories): ?>data-mage-init='{"collapsible":{"mediaQueryScope":"(max-width: 767px)"},"ccCategoryLinks":{}}'<?php endif;?>>
             <?php if($block->getVar('category_links/show_title')): ?>
                 <h2 class="cs-category-links__title"><?= $categories['main_category']['name'] ?></h2>
             <?php endif; ?>
