--- a/view/frontend/templates/component/product_grid.phtml
+++ b/view/frontend/templates/component/product_grid.phtml
@@ -5,13 +5,12 @@ $visibility = $block->getVisibilityClass();
 
 $items = $viewModel->getItems();
 
-$componentClasses = $block->getSkipSpacing() ? ' cs-products-grid--skip-spacing' : ''; 
+$componentClasses = $block->getSkipSpacing() ? ' cs-products-grid--skip-spacing' : '';
 $componentClasses .= ' ' . $block->getVar('product_grid/additional_css_classes');
 $productsGridJsSettings = json_encode($block->getVar('grid_layout/product_grid/js') ?: '{}');
 ?>
 
-<link rel="stylesheet" href="<?= $block->getViewFileUrl('css/grid-layout.css'); ?>"/>
-<script defer-ignore></script>
+<?= $block->getCssOnce('css/grid-layout.css'); ?>
 
 <div <?= $visibility ? 'class="' . $visibility . '"' : ''; ?>>
     <div class="cs-container cs-container--products-grid">
@@ -28,7 +27,7 @@ $productsGridJsSettings = json_encode($block->getVar('grid_layout/product_grid/j
                 <div class="cs-grid-layout cs-products-grid__grid-layout">
                     <ul class="cs-grid-layout__grid cs-products-grid__grid">
                         <?php if(!empty($items) && $viewModel->useTeaser()): ?>
-                            <?php 
+                            <?php
                                 $newTeaserConfig = [
                                     "scenario" => [
                                         'desktopLayout' => [
