--- a/view/frontend/templates/component/mosaic.phtml
+++ b/view/frontend/templates/component/mosaic.phtml
@@ -1,11 +1,9 @@
 <?php
 /** @var $block \MageSuite\ContentConstructorFrontend\Block\Component\Mosaic */
-$componentConfiguration = $block->getData();
-$componentConfiguration['jsConfig'] = $block->getVar('mosaic/js_config');
 
 echo $this->getLayout()
     ->createBlock('MageSuite\ContentConstructorFrontend\Block\Component\ImageTeaser')
-    ->setData($componentConfiguration)
+    ->setData($block->getData())
     ->setMix('cs-image-teaser--mosaic ' . $block->getMix())
     ->setContainerMix('cs-container--mosaic ' . $block->getContainerMix())
     ->toHtml();
