--- a/view/frontend/templates/component/product_finder.phtml
+++ b/view/frontend/templates/component/product_finder.phtml
@@ -10,17 +10,11 @@ $i = 0;
 
 $componentClasses = $block->getSkipSpacing() ? ' cs-product-finder--skip-spacing' : '';
 $componentClasses .= ' ' . $block->getVar('product_finder/additional_css_classes');
-
-$jsSettings = json_encode($block->getVar('product_finder/js') ?: '{}');
 ?>
-
-<link rel="stylesheet" href="<?= $block->getViewFileUrl('css/product-finder.css'); ?>"/>
-<script defer-ignore></script>
-
 <div <?= $visibility ? 'class="' . $visibility . '"' : ''; ?>>
     <div class="cs-container cs-container--product-finder">
         <div class="cs-container__inner">
-            <div class="cs-product-finder<?= $componentClasses ?>" data-mage-init='{ "ccProductFinder": <?= $jsSettings ?> }'>
+            <div class="cs-product-finder<?= $componentClasses ?>">
             <?php foreach($steps as $step): ?>
                 <?php
 
