--- a/view/frontend/templates/component/category_links.phtml
+++ b/view/frontend/templates/component/category_links.phtml
@@ -7,6 +7,7 @@ $subCategories = $categories['sub_categories'];
 $shouldShowProductsCount = $viewModel->shouldShowProductsCount();
 $visibility = $block->getVisibilityClass();
 $hasSubcategories = $viewModel->hasSubcategories();
+$shouldHideLinkToAllProducts = $viewModel->shouldHideLinkToAllProducts();
 
 $componentClasses = $hasSubcategories ? ' ' : " cs-category-links--no-subcats";
 $componentClasses .= $block->getSkipSpacing() ? ' cs-category-links--skip-spacing' : '';
@@ -50,6 +51,7 @@ $componentClasses .= ' ' . $block->getVar('category_links/additional_css_classes
                         </ul>
                         <?php endif; ?>
 
+                        <?php if(!$shouldHideLinkToAllProducts): ?>
                         <ul class="cs-category-links__list-all">
                             <li class="cs-category-links__list-all-item">
                                 <a href="<?=$categories['main_category']['url']?>" class="cs-category-links__link">
@@ -65,6 +67,7 @@ $componentClasses .= ' ' . $block->getVar('category_links/additional_css_classes
                                 </a>
                             </li>
                         </ul>
+                        <?php endif; ?>
                     </div>
                 </div>
             </div>
